// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li>
        <a
          className="resLink resLink--all is-selected"
          href="/"
          onClick={[Function]}
        >
          <span
            className="resLink--all-name"
          >
            All
          </span>
          <span
            className="resLink-alertBadge"
          >
            7
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/resource4"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              height="10"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
              viewBox="0 0 10 10"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9.65354132 6.83246601-1.85421206-.75144721c.12960419-.33538852.20067074-.69990442.20067074-1.0810188 0-1.65685425-1.34314575-3-3-3s-3 1.34314575-3 3 1.34314575 3 3 3c.25896905 0 .51027414-.03281333.74998437-.09450909l.37116491 1.96832235c-.360418.08256902-.73568991.12618674-1.12114928.12618674-2.76142375 0-5-2.23857625-5-5s2.23857625-5 5-5 5 2.23857625 5 5c0 .64686359-.12283756 1.26503693-.34645868 1.83246601z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            resource4
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:36:03.000Z"
              title="2017-12-21 15:36"
            >
              &lt;5s
            </time>
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/resource9"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              height="10"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
              viewBox="0 0 10 10"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9.65354132 6.83246601-1.85421206-.75144721c.12960419-.33538852.20067074-.69990442.20067074-1.0810188 0-1.65685425-1.34314575-3-3-3s-3 1.34314575-3 3 1.34314575 3 3 3c.25896905 0 .51027414-.03281333.74998437-.09450909l.37116491 1.96832235c-.360418.08256902-.73568991.12618674-1.12114928.12618674-2.76142375 0-5-2.23857625-5-5s2.23857625-5 5-5 5 2.23857625 5 5c0 .64686359-.12283756 1.26503693-.34645868 1.83246601z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            resource9
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:35:58.000Z"
              title="2017-12-21 15:35"
            >
              &lt;15s
            </time>
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/resource19"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              height="10"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
              viewBox="0 0 10 10"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9.65354132 6.83246601-1.85421206-.75144721c.12960419-.33538852.20067074-.69990442.20067074-1.0810188 0-1.65685425-1.34314575-3-3-3s-3 1.34314575-3 3 1.34314575 3 3 3c.25896905 0 .51027414-.03281333.74998437-.09450909l.37116491 1.96832235c-.360418.08256902-.73568991.12618674-1.12114928.12618674-2.76142375 0-5-2.23857625-5-5s2.23857625-5 5-5 5 2.23857625 5 5c0 .64686359-.12283756 1.26503693-.34645868 1.83246601z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            resource19
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:35:48.000Z"
              title="2017-12-21 15:35"
            >
              &lt;30s
            </time>
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/resource29"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              height="10"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
              viewBox="0 0 10 10"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9.65354132 6.83246601-1.85421206-.75144721c.12960419-.33538852.20067074-.69990442.20067074-1.0810188 0-1.65685425-1.34314575-3-3-3s-3 1.34314575-3 3 1.34314575 3 3 3c.25896905 0 .51027414-.03281333.74998437-.09450909l.37116491 1.96832235c-.360418.08256902-.73568991.12618674-1.12114928.12618674-2.76142375 0-5-2.23857625-5-5s2.23857625-5 5-5 5 2.23857625 5 5c0 .64686359-.12283756 1.26503693-.34645868 1.83246601z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            resource29
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:35:38.000Z"
              title="2017-12-21 15:35"
            >
              &lt;30s
            </time>
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/resource39"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              height="10"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
              viewBox="0 0 10 10"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9.65354132 6.83246601-1.85421206-.75144721c.12960419-.33538852.20067074-.69990442.20067074-1.0810188 0-1.65685425-1.34314575-3-3-3s-3 1.34314575-3 3 1.34314575 3 3 3c.25896905 0 .51027414-.03281333.74998437-.09450909l.37116491 1.96832235c-.360418.08256902-.73568991.12618674-1.12114928.12618674-2.76142375 0-5-2.23857625-5-5s2.23857625-5 5-5 5 2.23857625 5 5c0 .64686359-.12283756 1.26503693-.34645868 1.83246601z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            resource39
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:35:28.000Z"
              title="2017-12-21 15:35"
            >
              &lt;45s
            </time>
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/resource49"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              height="10"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
              viewBox="0 0 10 10"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9.65354132 6.83246601-1.85421206-.75144721c.12960419-.33538852.20067074-.69990442.20067074-1.0810188 0-1.65685425-1.34314575-3-3-3s-3 1.34314575-3 3 1.34314575 3 3 3c.25896905 0 .51027414-.03281333.74998437-.09450909l.37116491 1.96832235c-.360418.08256902-.73568991.12618674-1.12114928.12618674-2.76142375 0-5-2.23857625-5-5s2.23857625-5 5-5 5 2.23857625 5 5c0 .64686359-.12283756 1.26503693-.34645868 1.83246601z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            resource49
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:35:18.000Z"
              title="2017-12-21 15:35"
            >
              &lt;1m
            </time>
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/resource54"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              height="10"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
              viewBox="0 0 10 10"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9.65354132 6.83246601-1.85421206-.75144721c.12960419-.33538852.20067074-.69990442.20067074-1.0810188 0-1.65685425-1.34314575-3-3-3s-3 1.34314575-3 3 1.34314575 3 3 3c.25896905 0 .51027414-.03281333.74998437-.09450909l.37116491 1.96832235c-.360418.08256902-.73568991.12618674-1.12114928.12618674-2.76142375 0-5-2.23857625-5-5s2.23857625-5 5-5 5 2.23857625 5 5c0 .64686359-.12283756 1.26503693-.34645868 1.83246601z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            resource54
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:35:13.000Z"
              title="2017-12-21 15:35"
            >
              &lt;1m
            </time>
          </span>
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="Sidebar-spacer"
  >
     
  </div>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<section
  className="Sidebar is-closed"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li>
        <a
          className="resLink resLink--all is-selected"
          href="/"
          onClick={[Function]}
        >
          <span
            className="resLink--all-name"
          >
            All
          </span>
          
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="Sidebar-spacer"
  >
     
  </div>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders list of resources 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li>
        <a
          className="resLink resLink--all is-selected"
          href="/"
          onClick={[Function]}
        >
          <span
            className="resLink--all-name"
          >
            All
          </span>
          <span
            className="resLink-alertBadge"
          >
            2
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/vigoda"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              height="10"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
              viewBox="0 0 10 10"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9.65354132 6.83246601-1.85421206-.75144721c.12960419-.33538852.20067074-.69990442.20067074-1.0810188 0-1.65685425-1.34314575-3-3-3s-3 1.34314575-3 3 1.34314575 3 3 3c.25896905 0 .51027414-.03281333.74998437-.09450909l.37116491 1.96832235c-.360418.08256902-.73568991.12618674-1.12114928.12618674-2.76142375 0-5-2.23857625-5-5s2.23857625-5 5-5 5 2.23857625 5 5c0 .64686359-.12283756 1.26503693-.34645868 1.83246601z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            vigoda
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:36:07.000Z"
              title="2017-12-21 15:36"
            >
              &lt;5s
            </time>
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/snack"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              height="10"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
              viewBox="0 0 10 10"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9.65354132 6.83246601-1.85421206-.75144721c.12960419-.33538852.20067074-.69990442.20067074-1.0810188 0-1.65685425-1.34314575-3-3-3s-3 1.34314575-3 3 1.34314575 3 3 3c.25896905 0 .51027414-.03281333.74998437-.09450909l.37116491 1.96832235c-.360418.08256902-.73568991.12618674-1.12114928.12618674-2.76142375 0-5-2.23857625-5-5s2.23857625-5 5-5 5 2.23857625 5 5c0 .64686359-.12283756 1.26503693-.34645868 1.83246601z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            snack
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:35:57.000Z"
              title="2017-12-21 15:35"
            >
              &lt;15s
            </time>
          </span>
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="Sidebar-spacer"
  >
     
  </div>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li>
        <a
          className="resLink resLink--all is-selected"
          href="/"
          onClick={[Function]}
        >
          <span
            className="resLink--all-name"
          >
            All
          </span>
          <span
            className="resLink-alertBadge"
          >
            2
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/vigoda"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              height="10"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
              viewBox="0 0 10 10"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9.65354132 6.83246601-1.85421206-.75144721c.12960419-.33538852.20067074-.69990442.20067074-1.0810188 0-1.65685425-1.34314575-3-3-3s-3 1.34314575-3 3 1.34314575 3 3 3c.25896905 0 .51027414-.03281333.74998437-.09450909l.37116491 1.96832235c-.360418.08256902-.73568991.12618674-1.12114928.12618674-2.76142375 0-5-2.23857625-5-5s2.23857625-5 5-5 5 2.23857625 5 5c0 .64686359-.12283756 1.26503693-.34645868 1.83246601z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            vigoda
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            —
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/snack"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotAutoBuilding auto"
              fill="#93a1a1"
              height="10"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
              viewBox="0 0 10 10"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9.65354132 6.83246601-1.85421206-.75144721c.12960419-.33538852.20067074-.69990442.20067074-1.0810188 0-1.65685425-1.34314575-3-3-3s-3 1.34314575-3 3 1.34314575 3 3 3c.25896905 0 .51027414-.03281333.74998437-.09450909l.37116491 1.96832235c-.360418.08256902-.73568991.12618674-1.12114928.12618674-2.76142375 0-5-2.23857625-5-5s2.23857625-5 5-5 5 2.23857625 5 5c0 .64686359-.12283756 1.26503693-.34645868 1.83246601z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            snack
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            —
          </span>
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="Sidebar-spacer"
  >
     
  </div>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders resources with manual trigger mode 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li>
        <a
          className="resLink resLink--all is-selected"
          href="/"
          onClick={[Function]}
        >
          <span
            className="resLink--all-name"
          >
            All
          </span>
          <span
            className="resLink-alertBadge"
          >
            2
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/vigoda"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotManualBuilding manual"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m24 12h-3c0-4.97056275-4.0294373-9-9-9-4.97056275 0-9 4.02943725-9 9 0 4.9705627 4.02943725 9 9 9v3c-6.627417 0-12-5.372583-12-12s5.372583-12 12-12 12 5.372583 12 12z"
                fill="#93a1a1"
                fillRule="evenodd"
              />
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            vigoda
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:36:07.000Z"
              title="2017-12-21 15:36"
            >
              &lt;5s
            </time>
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/snack"
          onClick={[Function]}
        >
          <div
            className="sidebarIcon"
          >
            <svg
              className="dotManualBuilding manual"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m24 12h-3c0-4.97056275-4.0294373-9-9-9-4.97056275 0-9 4.02943725-9 9 0 4.9705627 4.02943725 9 9 9v3c-6.627417 0-12-5.372583-12-12s5.372583-12 12-12 12 5.372583 12 12z"
                fill="#93a1a1"
                fillRule="evenodd"
              />
            </svg>
          </div>
          <span
            className="resLink-name"
          >
            snack
          </span>
          <span
            className="resLink-alertBadge"
          >
            1
          </span>
          <span
            className="resLink-timeAgo"
          >
            <time
              dateTime="2017-12-21T15:35:57.000Z"
              title="2017-12-21 15:35"
            >
              &lt;15s
            </time>
          </span>
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="Sidebar-spacer"
  >
     
  </div>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;
